# vault-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__ copy.py  storage.py
src/vault_cli/: crypto.py  main.py  password_validator.py  storage.py
tests/: __init__.py  conftest.py  test_crypto.py  test_main.py  test_password_validator.py  test_storage.py
