[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-cli"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A secure command-line password manager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.0",
    "rich>=13.0.0",
]

[project.scripts]
vault-cli = "vault_cli.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/vault-cli"
"Bug Tracker" = "https://github.com/yourusername/vault-cli/issues" 